--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width-device-width, initial-scale-1.0">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Instagram</title>
+</head>
+<body>
+	<div class="instagram-wrapper">
+		<div class="instagram-phone">
+			<img src="./img/instagram-phone.png" alt="mobile phone">
+		</div>	
+		<div class="instagram-continue">
+			<div class="group">
+				<img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
+			
+				<input type="text" name="username" class="instagram-username">
+				<input type="text" name="password" class="instagram-password">
+				<a href="#" class="instagram-login">Log In</a>
+				Or
+				<a href="#" class="facebook-login">Log in with Facebook</a>
+				<a href="#" class="password-recovery">Forgot password?</a>
+			</div>
+			<div class="group">
+				<p class="not-account">Don't have an account?
+					<span class="link-blue">Sign up</span>
+				</p>
+			</div>
+			<div class="get-the-app">
+				<p class="get-app">Get the app.</p>
+				<div class="download">
+					<a href="#" class="app-download"></a>
+					<a href="#" class="app-download"></a>					
+				</div>
+			</div>
+		</div>
+	</div>
+</body>
+</html>
